--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
   <!--Open Graph Title-->
   
-      <meta property="og:title" content="椒塘博客"/>
+      <meta property="og:title" content="椒塘餐厅"/>
   
   <!--Open Graph Description-->
   
       <meta property="og:description" content="地址 中关村软件园二期苗圃食堂 电话 010-82770820" />
   
   <!--Open Graph Site Name-->
-  <meta property="og:site_name" content="椒塘博客"/>
+  <meta property="og:site_name" content="椒塘餐厅"/>
   <!--Type page-->
   
       <meta property="og:type" content="website" />
@@ -38,7 +38,7 @@
 
   <!-- Title -->
   
-  <title>椒塘博客 - 一个餐厅的技术博客</title>
+  <title>椒塘餐厅</title>
 
 
   <link rel="shortcut icon" href="/images/logo.png">
@@ -71,7 +71,7 @@
     <div class="logo">
       <a href="/" rel="home">
         
-        <img src="/images/logo.png" alt="椒塘博客" height="60">
+        <img src="/images/logo.png" alt="椒塘餐厅" height="60">
         
       </a>
     </div>
