--- a/newDish.html
+++ b/newDish.html
@@ -39,6 +39,55 @@
                </div>
         </div>
     </div>
+    <div class="row">
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/dish3.png">
+                    </div>
+                    <div class="card-content">
+                        <p>冬季温补正当时</p>
+                    </div>
+               </div>
+        </div>
+    </div>
+    <div class="row">
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/dish4.png">
+                    </div>
+                    <div class="card-content">
+                        <p>冬季温补正当时</p>
+                    </div>
+               </div>
+        </div>
+    </div>
+    <div class="row">
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/dish5.png">
+                    </div>
+                    <div class="card-content">
+                        <p>冬季温补正当时</p>
+                    </div>
+               </div>
+        </div>
+    </div>
+    <div class="row">
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/dish6.png">
+                    </div>
+                    <div class="card-content">
+                        <p>冬季温补正当时</p>
+                    </div>
+               </div>
+        </div>
+    </div>
+
                     
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
