--- a/newDish.html
+++ b/newDish.html
@@ -4,16 +4,19 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
+    <link rel="shortcut icon" href="images/new.ico" />
+    <link rel="bookmark"href="images/new.ico" />
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>冬日也有好“食”光，椒塘N多新菜出炉</title>
   </head>
 
   <body> 
         <div class="card-panel">
              <img src="images/logo.png" alt="椒塘餐厅" height="60">
-             <span class="blue-text text-darken-2">椒塘上新</span>
+             <span class="blue-text text-darken-2">冬日也有好“食”光，椒塘N多新菜出炉</span>
         </div>
     <div class="row">
             <div class="col s12 m6">
