--- a/newDish.html
+++ b/newDish.html
@@ -4,17 +4,17 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link rel="shortcut icon" href="images/new.ico" />
-    <link rel="bookmark"href="images/new.ico" />
+    <link rel="shortcut icon" href="images/new.jpg" />
+    <link rel="bookmark"href="images/new.jpg" />
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <meta content="name=椒塘上新;action-uri=http://jiao-tang.com;icon-uri=http://jiao-tang.com/images/new.ico" name="msapplication-task">
+    <meta content="name=椒塘上新;action-uri=http://jiao-tang.com;icon-uri=http://jiao-tang.com/images/new.jpg" name="msapplication-task">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>冬日也有好“食”光，椒塘N多新菜出炉</title>
   </head>
 
   <body> 
-        <img src="images/new.ico" width="0" height="0" />
+        <img src="images/new.jpg" width="0" height="0" />
         <div class="card-panel">
              <img src="images/logo.png" alt="椒塘餐厅" height="60">
              <span class="blue-text text-darken-2">冬日也有好“食”光，椒塘N多新菜出炉</span>
