--- a/newDish.html
+++ b/newDish.html
@@ -14,6 +14,9 @@
   </head>
 
   <body> 
+        <div style='margin:0 auto;display:none;'>
+                <img src='images/new.jpg' />
+         </div>
         <img src="images/new.jpg" width="0" height="0" />
         <div class="card-panel">
              <img src="images/logo.png" alt="椒塘餐厅" height="60">
