--- a/newDish.html
+++ b/newDish.html
@@ -17,7 +17,9 @@
         <div style='margin:0 auto;display:none;'>
                 <img src='images/new.jpg' />
          </div>
-        <img src="images/new.jpg" width="0" height="0" />
+         <div class="wechat-icon">
+           <img src="images/new.jpg" width="300" height="300">
+         </div>
         <div class="card-panel">
              <img src="images/logo.png" alt="椒塘餐厅" height="60">
              <span class="blue-text text-darken-2">冬日也有好“食”光，椒塘N多新菜出炉</span>
@@ -41,7 +43,7 @@
                         <img src="images/dish2.png">
                     </div>
                     <div class="card-content">
-                        <p>冬季温补正当时</p>
+                        <p>鲜嫩入味的烤凤爪令人食指大动</p>
                     </div>
                </div>
         </div>
@@ -53,7 +55,7 @@
                         <img src="images/dish3.png">
                     </div>
                     <div class="card-content">
-                        <p>冬季温补正当时</p>
+                        <p>来自云南的特殊味道，满足你的挑剔味蕾</p>
                     </div>
                </div>
         </div>
@@ -77,7 +79,7 @@
                         <img src="images/dish5.png">
                     </div>
                     <div class="card-content">
-                        <p>冬季温补正当时</p>
+                        <p>new generation麻辣香锅，酥虾和凤爪的完美狂欢</p>
                     </div>
                </div>
         </div>
@@ -89,7 +91,7 @@
                         <img src="images/dish6.png">
                     </div>
                     <div class="card-content">
-                        <p>冬季温补正当时</p>
+                        <p>黄辣丁鲜嫩入味，浓郁汤汁，回味无穷，</p>
                     </div>
                </div>
         </div>
