--- a/newDish.html
+++ b/newDish.html
@@ -10,6 +10,11 @@
     <meta content="name=椒塘上新;action-uri=http://jiao-tang.com;icon-uri=http://jiao-tang.com/images/new.jpg" name="msapplication-task">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:type" content="椒塘" />
+    <meta property="og:title" content="椒塘上新">
+    <meta property="og:description" content="冬季也有好食光">
+    <meta property="og:image" content="http:/jiao-tang.com/images/new.jpg">
+    <meta property="og:url" content="http:/jiao-tang.com/newDish.html">
     <title>冬日也有好“食”光，椒塘N多新菜出炉</title>
   </head>
 
@@ -18,7 +23,7 @@
                 <img src='images/new.jpg' />
          </div>
          <div class="wechat-icon">
-           <img src="images/new.jpg" width="300" height="300">
+           <img src="http:/jiao-tang.com/images/new.jpg" width="300" height="300">
          </div>
         <div class="card-panel">
              <img src="images/logo.png" alt="椒塘餐厅" height="60">
