--- a/newDish.html
+++ b/newDish.html
@@ -23,7 +23,7 @@
                 <img src='images/new.jpg' />
          </div>
          <div class="wechat-icon">
-           <img src="http:/jiao-tang.com/images/new.jpg" width="300" height="300">
+           <img src="http://jiao-tang.com/images/new.jpg" width="300" height="300">
          </div>
         <div class="card-panel">
              <img src="images/logo.png" alt="椒塘餐厅" height="60">
