--- a/newDish.html
+++ b/newDish.html
@@ -24,82 +24,10 @@
             <img src="images/logo.png" alt="椒塘餐厅" height="60">
             <span class="blue-text text-darken-2">冬日也有好“食”光，椒塘N多新菜出炉</span>
     </div>
-    <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/dish1.png">
-                    </div>
-                    <div class="card-content">
-                        <p>久违的鲜香麻辣</p>
-                    </div>
-               </div>
-        </div>
-    </div>
-    <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/dish2.png">
-                    </div>
-                    <div class="card-content">
-                        <p>鲜嫩入味的烤凤爪令人食指大动</p>
-                    </div>
-               </div>
-        </div>
-    </div>
-    <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/dish3.png">
-                    </div>
-                    <div class="card-content">
-                        <p>来自云南的特殊味道，满足你的挑剔味蕾</p>
-                    </div>
-               </div>
-        </div>
-    </div>
-    <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/dish4.png">
-                    </div>
-                    <div class="card-content">
-                        <p>冬季温补正当时</p>
-                    </div>
-               </div>
-        </div>
-    </div>
-    <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/dish5.png">
-                    </div>
-                    <div class="card-content">
-                        <p>new generation麻辣香锅，酥虾和凤爪的完美狂欢</p>
-                    </div>
-               </div>
-        </div>
-    </div>
-    <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/dish6.png">
-                    </div>
-                    <div class="card-content">
-                        <p>黄辣丁鲜嫩入味，浓郁汤汁，回味无穷，</p>
-                    </div>
-               </div>
-        </div>
-    </div>
-
                     
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script>
+        location.href= "https://mp.weixin.qq.com/s/ziFSE1yG1swuOCiM7OG7Lw";
+    </script>
   </body>
 </html>
